--- a/medical_warehouse/models/staging/source.yml
+++ b/medical_warehouse/models/staging/source.yml
@@ -1,9 +1,13 @@
 version: 2
 
 sources:
-  - name: raw_data      # This MUST match the first part of {{ source('raw_data', ...) }}
-    schema: public      # This is where your tables (fct_messages, image_analysis) are
+  - name: processed
+    schema: public
+    tables:
+      - name: fct_messages
+      - name: image_analysis
+
+  - name: raw
+    schema: raw
     tables:
       - name: telegram_messages
-      - name: image_analysis
-      - name: fct_messages
