--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -6,7 +6,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    # --- ADD THIS SECTION ---
     services:
       postgres:
         image: postgres:15
@@ -16,13 +15,11 @@ jobs:
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
-        # Wait until postgres is healthy before starting the job
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-    # ------------------------
 
     steps:
       - uses: actions/checkout@v3
@@ -32,14 +29,20 @@ jobs:
         with:
           python-version: "3.10"
           
+      # --- THIS IS THE UPDATED DEPENDENCY SECTION ---
       - name: Install dependencies
         run: |
-          pip install pytest pytest-asyncio pandas sqlalchemy psycopg2-binary \
-                      telethon ultralytics pydantic-settings shap joblib
-                      
+          python -m pip install --upgrade pip
+          pip install psycopg2-binary 
+          pip install pytest pytest-asyncio pandas sqlalchemy telethon \
+                      ultralytics pydantic-settings shap joblib matplotlib
+          
+          # Only uncomment the line below if you actually have a requirements.txt file
+          # pip install -r requirements.txt 
+      # ----------------------------------------------
+
       - name: Run Tests
         env:
-          # Match these to the service env above
           DATABASE_URL: postgresql://birhanu:7121@localhost:5432/postgres
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
