--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -29,20 +29,18 @@ jobs:
         with:
           python-version: "3.10"
           
-      # --- THIS IS THE UPDATED DEPENDENCY SECTION ---
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install psycopg2-binary 
+          # Explicitly install the postgres driver first
+          pip install psycopg2-binary
+          # Install everything else
           pip install pytest pytest-asyncio pandas sqlalchemy telethon \
                       ultralytics pydantic-settings shap joblib matplotlib
-          
-          # Only uncomment the line below if you actually have a requirements.txt file
-          # pip install -r requirements.txt 
-      # ----------------------------------------------
-
+                      
       - name: Run Tests
         env:
+          # This tells your scripts to use the GitHub service DB
           DATABASE_URL: postgresql://birhanu:7121@localhost:5432/postgres
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
